...
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button {
                        dismiss()
                        model.showSettings = true
                    } label: {
                        Label("管理", systemImage: "gearshape")
                    }
                }
            }
        }
        .presentationDetents([.medium, .large])
        .sheet(isPresented: $showUniFusionAdd) {
...
